@@ -1,6 +1,6 @@
 Package: MALDIquantForeign
-Version: 0.11
-Date: 2017-09-01
+Version: 0.11.1
+Date: 2017-12-04
 Title: Import/Export Routines for 'MALDIquant'
 Authors@R: c(person("Sebastian", "Gibb", role=c("aut", "cre"),
         email="mail@sebastiangibb.de"), person("Pietro", "Franceschi",
@@ -22,9 +22,9 @@ LazyLoad: yes
 VignetteBuilder: knitr
 RoxygenNote: 5.0.1
 NeedsCompilation: no
-Packaged: 2017-09-06 18:20:52 UTC; sebastian
+Packaged: 2017-12-04 12:08:45 UTC; sebastian
 Author: Sebastian Gibb [aut, cre],
   Pietro Franceschi [ctb]
 Maintainer: Sebastian Gibb <mail@sebastiangibb.de>
 Repository: CRAN
-Date/Publication: 2017-09-06 18:29:52 UTC
+Date/Publication: 2017-12-04 12:30:50 UTC
