@@ -1,6 +1,15 @@
 RELEASE HISTORY OF THE "MALDIquantForeign" PACKAGE
 ==================================================
 
+CHANGES IN MALDIquantForeign VERSION 0.11.1 [2017-12-04]:
+---------------------------------------------------------
+
+BUGFIX
+
+* Fix handling of "processed" argument in `.writeImzMlDocument`; see #21.
+* Fix `export` method if there was no filename given.
+
+
 CHANGES IN MALDIquantForeign VERSION 0.11 [2017-09-01]:
 -------------------------------------------------------
 
